--- a/pages/code/contrib/asdocs/all-index-A.html
+++ b/pages/code/contrib/asdocs/all-index-A.html
@@ -358,6 +358,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html#addAS()">addAS</a>(ds:<a href="com/whirled/contrib/platformer/display/DynamicSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:DynamicSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html">ActorSpriteLayer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Checksum.html#addBoolean()">addBoolean</a>(val) &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/Checksum.html">Checksum</a></td>
 </tr>
 <tr>
@@ -469,6 +475,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html#addDS()">addDS</a>(ds:<a href="com/whirled/contrib/platformer/display/DynamicSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:DynamicSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html">ActorSpriteLayer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSpriteLayer.html#addDS()">addDS</a>(ds:<a href="com/whirled/contrib/platformer/display/DynamicSprite.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:DynamicSprite</a>) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSpriteLayer.html">DynamicSpriteLayer</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
