--- a/pages/code/contrib/asdocs/all-index-C.html
+++ b/pages/code/contrib/asdocs/all-index-C.html
@@ -1799,7 +1799,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("CÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html#create()">create</a>(state, id, idx) &mdash; Static method in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html">SpawnMessage</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html#create()">create</a>(state, id, idx, x, y) &mdash; Static method in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html">SpawnMessage</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
