--- a/pages/code/contrib/asdocs/all-index-E.html
+++ b/pages/code/contrib/asdocs/all-index-E.html
@@ -377,6 +377,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("EÂ
  return to its basic animation state.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html#endGame()">endGame</a>() &mdash; Method in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html">PlatformerController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html#END_TOKEN">END_TOKEN</a> &mdash; Constant static property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/Chunker.html">Chunker</a></td>
 </tr>
 <tr>
