--- a/pages/code/contrib/asdocs/all-index-L.html
+++ b/pages/code/contrib/asdocs/all-index-L.html
@@ -535,6 +535,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("LÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/ZipMultiLoader.html#_loader">_loader</a> &mdash; Property in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/ZipMultiLoader.html">ZipMultiLoader</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html#_loader">_loader</a> &mdash; Property in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html">ImageResource</a></td>
 </tr>
 <tr>
