--- a/pages/code/contrib/asdocs/all-index-S.html
+++ b/pages/code/contrib/asdocs/all-index-S.html
@@ -1975,7 +1975,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html#spawnIndex()">spawnIndex</a>(idx) &mdash; Static method in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html">SpawnMessage</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html#spawnIndex()">spawnIndex</a>(idx, x, y) &mdash; Static method in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/SpawnMessage.html">SpawnMessage</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
