--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
@@ -138,7 +138,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#initZip()">initZip</a>(source:Object, onReady:Function, duplicate:Boolean = true):void</div>
+<a class="signatureLink" href="#initZip()">initZip</a>(source:Object, onReady:Function, duplicate:Boolean = true, progressListener:Function = null):void</div>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
 </tr>
@@ -402,7 +402,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static function initZip(source:Object, onReady:Function, duplicate:Boolean = true):void</code><span class="label">Parameters</span>
+<code>public static function initZip(source:Object, onReady:Function, duplicate:Boolean = true, progressListener:Function = null):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">source</span>:Object</code></td>
@@ -418,6 +418,12 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">duplicate</span>:Boolean</code> (default = <code>true</code>)<code></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">progressListener</span>:Function</code> (default = <code>null</code>)<code></code></td>
 </tr>
 </table>
 </div>
