--- a/pages/code/asdocs/com/whirled/AbstractSubControl.html
+++ b/pages/code/asdocs/com/whirled/AbstractSubControl.html
@@ -147,8 +147,9 @@ showHideInherited();
 <code>public override function doBatch(fn:Function, ... args):void</code><p>
      
      Execute the specified function as a batch of commands that will be sent to the server
-     together. This is no different from executing the commands outside of a batch, but
-     may result in better use of the network and should be used if setting a number of things
+     together.  Messages can be sent no faster than a rate of 10 per second.  Using doBatch groups
+     a number of set or sendMessage operations so that they are treated as a single unit towards
+     this limit. For best performance, it should be used whenever a number of values are being set
      at once.
           </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
