--- a/pages/code/contrib/asdocs/all-index-I.html
+++ b/pages/code/contrib/asdocs/all-index-I.html
@@ -407,7 +407,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#initZip()">initZip</a>(source, onReady, duplicate) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#initZip()">initZip</a>(source, onReady, duplicate, progressListener) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
