--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="PlatformerController,com.whirled.contrib.platformer.PlatformerController,addGameListeners,createBoard,createGameController,createMessageManager,createPieceFactory,handleGameEnded,handleGameStarted,removeGameListeners,run,shutdown" name="keywords">
+<meta content="PlatformerController,com.whirled.contrib.platformer.PlatformerController,addGameListeners,createBoard,createGameController,createMessageManager,createPieceFactory,endGame,handleGameEnded,handleGameStarted,removeGameListeners,run,shutdown" name="keywords">
 <title>com.whirled.contrib.platformer.PlatformerController</title>
 </head>
 <body>
@@ -57,6 +57,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#PlatformerController()">PlatformerController</a>(disp:DisplayObject)</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PlatformerController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#endGame()">endGame</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PlatformerController</td>
 </tr>
@@ -240,6 +247,15 @@ showHideInherited();
 <td width="20"></td><td><code><a href="piece/PieceFactory.html">PieceFactory</a></code></td>
 </tr>
 </table>
+</div>
+<a name="endGame()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">endGame</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function endGame():void</code>
 </div>
 <a name="handleGameEnded()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
