--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
@@ -108,6 +108,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#findNode()">findNode</a>(node:String, disp:DisplayObject):DisplayObject</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">DynamicSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#findNodes()">findNodes</a>(nodes:Array, disp:DisplayObject):Array</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">DynamicSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#getDynamic()">getDynamic</a>():<a href="../piece/Dynamic.html">Dynamic</a>
 </div>
 <div class="summaryTableDescription"></div>
@@ -154,20 +168,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#changeState()">changeState</a>(newState:String):void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">DynamicSprite</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#findNode()">findNode</a>(node:String, disp:DisplayObject):DisplayObject</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">DynamicSprite</td>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#findNodes()">findNodes</a>(nodes:Array, disp:DisplayObject):Array</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DynamicSprite</td>
 </tr>
@@ -380,7 +380,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function findNode(node:String, disp:DisplayObject):DisplayObject</code><span class="label">Parameters</span>
+<code>public static function findNode(node:String, disp:DisplayObject):DisplayObject</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">node</span>:String</code></td>
@@ -407,7 +407,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function findNodes(nodes:Array, disp:DisplayObject):Array</code><span class="label">Parameters</span>
+<code>public static function findNodes(nodes:Array, disp:DisplayObject):Array</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">nodes</span>:Array</code></td>
