--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/SpawnMessage.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/SpawnMessage.html
@@ -97,7 +97,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#create()">create</a>(state:int, id:int, idx:int = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a>
+<a class="signatureLink" href="#create()">create</a>(state:int, id:int, idx:int = 0, x:Number = 0, y:Number = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a>
 </div>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">SpawnMessage</td>
@@ -128,7 +128,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#spawnIndex()">spawnIndex</a>(idx:int):<a href="../net/SpawnMessage.html">SpawnMessage</a>
+<a class="signatureLink" href="#spawnIndex()">spawnIndex</a>(idx:int, x:Number = 0, y:Number = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a>
 </div>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">SpawnMessage</td>
@@ -283,7 +283,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static function create(state:int, id:int, idx:int = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a></code><span class="label">Parameters</span>
+<code>public static function create(state:int, id:int, idx:int = 0, x:Number = 0, y:Number = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a></code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">state</span>:int</code></td>
@@ -299,6 +299,18 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">idx</span>:int</code> (default = <code>0</code>)<code></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">x</span>:Number</code> (default = <code>0</code>)<code></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">y</span>:Number</code> (default = <code>0</code>)<code></code></td>
 </tr>
 </table>
 <p></p>
@@ -384,10 +396,22 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static function spawnIndex(idx:int):<a href="../net/SpawnMessage.html">SpawnMessage</a></code><span class="label">Parameters</span>
+<code>public static function spawnIndex(idx:int, x:Number = 0, y:Number = 0):<a href="../net/SpawnMessage.html">SpawnMessage</a></code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">idx</span>:int</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">x</span>:Number</code> (default = <code>0</code>)<code></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">y</span>:Number</code> (default = <code>0</code>)<code></code></td>
 </tr>
 </table>
 <p></p>
