--- a/src/gwt/public/account/index.html
+++ b/src/gwt/public/account/index.html
@@ -3,10 +3,12 @@
 <head>
   <title>Account</title>
 </head>
-
 <body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
   <script language="javascript" src="account.nocache.js"></script>
   <script id="recaptcha" type="text/javascript"></script>
+  <script id="fbhelper" type="text/javascript"></script>
+  <script id="fbconnect" type="text/javascript"
+          src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php"></script>
 </body>
 </html>
